cmake_minimum_required(VERSION 3.12)
project(demo1)

set(CMAKE_CXX_STANDARD 14)

add_executable(demo1 main.cpp Sort-Alogrithms/SortTestHelper.h Sort-Alogrithms/SortAlogrithms.h Sort-Alogrithms/Questions.h Heap/MaxHeap.h Heap/HeapSort.h BinarySearch/BinarySearch.h Practice/Sum.h Practice/Repetition.h BinarySearch/BinarySearchTree.h)