cmake_minimum_required(VERSION 3.12)
project(demo1)

set(CMAKE_CXX_STANDARD 14)

add_executable(demo1 main.cpp Sort-Alogrithms/SortTestHelper.h Sort-Alogrithms/SortAlogrithms.h Sort-Alogrithms/Questions.h Heap/MaxHeap.h Heap/HeapSort.h BinarySearch/BinarySearch.h Practice/Sum.h Practice/Repetition.h BinarySearch/BinarySearchTree.h Practice/Dynamic.h Practice/SimpleMathematic.h Practice/Tree.h UnionFind/UnionFind1.h UnionFind/UnionFindTestHelper.h UnionFind/UnionFind2.h Graph/DenseGraph.h Graph/SparseGraph.h Graph/ReadGraph.h Graph/Component.h Graph/Path.h Graph/ShortestPath.h WeightGraph/Edge.h WeightGraph/LazyPrimMST.h WeightGraph/PrimMST.h WeightGraph/KruskalMST.h)